--- a/src/views/goods/index.css
+++ b/src/views/goods/index.css
@@ -1,3 +1,113 @@
 .page {
     background-color: #fff;
 }
+
+.goods-list {
+    width: 100%;
+    height: 100vh;
+    background-color: #F4F4F4;
+    overflow: hidden;
+}
+
+.tab-data {
+    width: 95%;
+    height: 95px;
+    padding: 0 2.5%;
+}
+
+.goods-list-content {
+    width: 95%;
+    height: 359px;
+    margin: 0 auto;
+    background: #FFFFFD;
+    border-radius: 30px;
+    margin-top: 20px;
+}
+
+.goods-list-content-top {
+    height: 242px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.goods-list-content-top-left {
+    width: 166px;
+    height: 176px;
+    background: #FFFFFF;
+    border: 1px solid #E5E5E5;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.goods-list-content-top-left img:nth-child(1) {
+    width: 141px;
+    height: 37px;
+}
+
+.goods-list-content-top-left img:nth-child(2) {
+    width: 144px;
+    height: 144px;
+}
+
+.goods-list-content-top-right {
+    width: calc( 90% - 166px);
+    height: 90%;
+}
+
+.goods-list-content-top-right-title {
+    width: 100%;
+    margin-left: 40px;
+    height: 80px;
+    line-height: 80px;
+    font-size: 32px;
+    font-family: PingFang SC;
+    font-weight: bold;
+    color: #202020;
+    display: flex;
+    align-items: center;
+}
+
+.goods-label {
+    padding: 0px 5px;
+    background-color: #FF7F24;
+    color: #fff;
+    text-align: center;
+    font-size: 12px;
+    line-height: 35px;
+    margin-left: 5px;
+}
+
+.day {
+    margin-left: 18%;
+    width: 66px;
+    font-size: 14px;
+    font-family: PingFang SC;
+    font-weight: 500;
+    color: #CCCCCC;
+}
+
+.goods-list-content-top-right-center {
+    width: 100%;
+    height: calc( 90% - 80px);
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.ins-list {
+    height: 30px;
+    line-height: 30px;
+    font-size: 26px;
+    font-family: PingFang SC;
+    font-weight: 500;
+}
+
+.goods-list-content-bottom {
+    height: 116px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
