--- a/src/views/add_goods/index.css
+++ b/src/views/add_goods/index.css
@@ -4,3 +4,13 @@
     align-items: center;
     justify-content: space-around;
 }
+
+.secondary-pages {
+    width: 100vw;
+    height: 100vh;
+    position: absolute;
+    left: 0;
+    top: 0;
+    background-color: #fff;
+    z-index: 99;
+}
